Refactor controllers; add support for volume and seeking in MPRIS and API
