# src/TidalControllers/DomController/DomTidalController.ts
@@ -1,4 +1,4 @@
-import { convertDurationToSeconds } from "../../features/time/parse";
+import { convertSecondsToClockFormat } from "../../features/time/parse";
 import { MediaInfo } from "../../models/mediaInfo";
 import { MediaStatus } from "../../models/mediaStatus";
 import { RepeatState } from "../../models/repeatState";
@@ -6,6 +6,60 @@ import { TidalController } from "../TidalController";
 import { DomControllerOptions } from "./DomControllerOptions";
 import { getTrackURL } from "../../features/tidal/url";
 import { constrainPollingInterval } from "../../utility/pollingConstraints";
+import { UI_SELECTORS } from "./constants";
+import {click, get, getText} from "./DomHelpers";
+
+/**
+ * Get a player element
+ */
+function getPlayer() {
+  return get("player") as HTMLVideoElement;
+}
+
+/**
+ * Get the icon of the current media
+ */
+function getSongIcon() {
+  const figure = get("media");
+
+  if (figure) {
+    const mediaElement = figure.querySelector(UI_SELECTORS.image) as HTMLImageElement;
+    if (mediaElement) {
+      return mediaElement.src.replace("80x80", "640x640");
+    }
+  }
+
+  return "";
+}
+
+/**
+ * returns an array of all artists in the current media
+ * @returns array of artists
+ */
+function getArtistsArray() {
+  const footer = get("footer");
+
+  if (footer) {
+    const artists = footer.querySelectorAll(UI_SELECTORS.artists);
+    if (artists)
+      return Array.from(artists).map((artist) => (artist as HTMLElement).textContent);
+  }
+  return [];
+}
+
+/**
+ * unify the artists array into a string separated by commas
+ * @param {Array} artistsArray
+ * @returns {String} artists
+ */
+function getArtistsString(artistsArray: string[]): string {
+  if (artistsArray.length > 0) return artistsArray.join(", ");
+  return "unknown artist(s)";
+}
+
+// function isMuted() {
+//   return get("volume").getAttribute("aria-checked") === "false"; // it's muted if aria-checked is false
+// }
 
 export class DomTidalController implements TidalController<DomControllerOptions> {
   private updateSubscriber: (state: Partial<MediaInfo>) => void;
@@ -13,155 +67,42 @@ export class DomTidalController implements TidalController<DomControllerOptions>
   private currentRepeatState: RepeatState = RepeatState.off;
   private currentShuffleState = false;
 
-  private readonly elements = {
-    play: '*[data-test="play"]',
-    pause: '*[data-test="pause"]',
-    next: '*[data-test="next"]',
-    previous: 'button[data-test="previous"]',
-    title: '*[data-test^="footer-track-title"]',
-    artists: '*[data-test^="grid-item-detail-text-title-artist"]',
-    home: '*[data-test="menu--home"]',
-    back: '[title^="Back"]',
-    forward: '[title^="Next"]',
-    search: '[class^="searchField"]',
-    shuffle: '*[data-test="shuffle"]',
-    repeat: '*[data-test="repeat"]',
-    account: '*[data-test^="profile-image-button"]',
-    media: '*[data-test="current-media-imagery"]',
-    image: "img",
-    current: '*[data-test="current-time"]',
-    duration: '*[class^=_playbackControlsContainer] *[data-test="duration"]',
-    bar: '*[data-test="progress-bar"]',
-    footer: "#footerPlayer",
-    mediaItem: "[data-type='mediaItem']",
-    album_header_title: '*[class^="playingFrom"] span:nth-child(2)',
-    playing_from: '*[class^="playingFrom"] span:nth-child(2)',
-    queue_album: "*[class^=playQueueItemsContainer] *[class^=groupTitle] span:nth-child(2)",
-    currentlyPlaying: "[class^='isPlayingIcon'], [data-test-is-playing='true']",
-    album_name_cell: '[class^="album"]',
-    tracklist_row: '[data-test="tracklist-row"]',
-    volume: '*[data-test="volume"]',
-    favorite: '*[data-test="footer-favorite-button"]',
-    /**
-     * Get an element from the dom
-     * @param {*} key key in elements object to fetch
-     */
-    get: function (key: string) {
-      return globalThis.document.querySelector(this[key.toLowerCase()]) ?? "";
-    },
-
-    /**
-     * Get the icon of the current media
-     */
-    getSongIcon: function () {
-      const figure = this.get("media");
-
-      if (figure) {
-        const mediaElement = figure.querySelector(this["image"]);
-        if (mediaElement) {
-          return mediaElement.src.replace("80x80", "640x640");
+  private _getAlbumName() {
+    try {
+      //If listening to an album, get its name from the header title
+      if (globalThis.location.href.includes("/album/")) {
+        const albumName = globalThis.document.querySelector(UI_SELECTORS.album_header_title);
+        if (albumName) {
+          return albumName.textContent;
         }
+        //If listening to a playlist or a mix, get the album name from the list
+      } else if (
+        globalThis.location.href.includes("/playlist/") ||
+        globalThis.location.href.includes("/mix/")
+      ) {
+        if (this.currentlyPlaying === MediaStatus.playing) {
+          // find the currently playing element from the list (which might be in an album icon), traverse back up to the mediaItem (row) and select the album cell.
+          // document.querySelector("[class^='isPlayingIcon'], [data-test-is-playing='true']").closest('[data-type="mediaItem"]').querySelector('[class^="album"]').textContent
+          const row = window.document
+            .querySelector(this.currentlyPlaying)
+            .closest(UI_SELECTORS.mediaItem);
+          if (row) {
+            return row.querySelector(UI_SELECTORS.album_name_cell).textContent;
+          }
+        }
+      }
+
+      // see whether we're on the queue page and get it from there
+      const queueAlbumName = getText("queue_album");
+      if (queueAlbumName) {
+        return queueAlbumName;
       }
 
       return "";
-    },
-
-    /**
-     * returns an array of all artists in the current media
-     * @returns {Array} artists
-     */
-    getArtistsArray: function () {
-      const footer = this.get("footer");
-
-      if (footer) {
-        const artists = footer.querySelectorAll(this.artists);
-        if (artists)
-          return Array.from(artists).map((artist) => (artist as HTMLElement).textContent);
-      }
-      return [];
-    },
-
-    /**
-     * unify the artists array into a string separated by commas
-     * @param {Array} artistsArray
-     * @returns {String} artists
-     */
-    getArtistsString: function (artistsArray: string[]) {
-      if (artistsArray.length > 0) return artistsArray.join(", ");
-      return "unknown artist(s)";
-    },
-
-    getAlbumName: function () {
-      try {
-        //If listening to an album, get its name from the header title
-        if (globalThis.location.href.includes("/album/")) {
-          const albumName = globalThis.document.querySelector(this.album_header_title);
-          if (albumName) {
-            return albumName.textContent;
-          }
-          //If listening to a playlist or a mix, get album name from the list
-        } else if (
-          globalThis.location.href.includes("/playlist/") ||
-          globalThis.location.href.includes("/mix/")
-        ) {
-          if (this.currentlyPlaying === MediaStatus.playing) {
-            // find the currently playing element from the list (which might be in an album icon), traverse back up to the mediaItem (row) and select the album cell.
-            // document.querySelector("[class^='isPlayingIcon'], [data-test-is-playing='true']").closest('[data-type="mediaItem"]').querySelector('[class^="album"]').textContent
-            const row = window.document
-              .querySelector(this.currentlyPlaying)
-              .closest(this.mediaItem);
-            if (row) {
-              return row.querySelector(this.album_name_cell).textContent;
-            }
-          }
-        }
-
-        // see whether we're on the queue page and get it from there
-        const queueAlbumName = this.getText("queue_album");
-        if (queueAlbumName) {
-          return queueAlbumName;
-        }
-
-        return "";
-      } catch {
-        return "";
-      }
-    },
-
-    isMuted: function () {
-      return this.get("volume").getAttribute("aria-checked") === "false"; // it's muted if aria-checked is false
-    },
-
-    isFavorite: function () {
-      return this.get("favorite").getAttribute("aria-checked") === "true";
-    },
-
-    /**
-     * Shorthand function to get the text of a dom element
-     * @param {*} key key in elements object to fetch
-     */
-    getText: function (key: string) {
-      const element = this.get(key);
-      return element ? element.textContent : "";
-    },
-
-    /**
-     * Shorthand function to click a dom element
-     * @param {*} key key in elements object to fetch
-     */
-    click: function (key: string) {
-      this.get(key).click();
-      return this;
-    },
-
-    /**
-     * Shorthand function to focus a dom element
-     * @param {*} key key in elements object to fetch
-     */
-    focus: function (key: string) {
-      return this.get(key).focus();
-    },
-  };
+    } catch {
+      return "";
+    }
+  }
 
   onMediaInfoUpdate(callback: (state: Partial<MediaInfo>) => void): void {
     this.updateSubscriber = callback;
@@ -197,10 +138,10 @@ export class DomTidalController implements TidalController<DomControllerOptions>
         playingFrom: this.getPlayingFrom(),
         status: currentStatus,
         url: getTrackURL(this.getTrackId()),
-        current,
-        currentInSeconds: convertDurationToSeconds(current),
-        duration,
-        durationInSeconds: convertDurationToSeconds(duration),
+        current: convertSecondsToClockFormat(current),
+        currentInSeconds: current,
+        duration: convertSecondsToClockFormat(duration),
+        durationInSeconds: duration,
         image: this.getSongIcon(),
         icon: this.getSongIcon(),
         favorite: this.isFavorite(),
@@ -219,53 +160,50 @@ export class DomTidalController implements TidalController<DomControllerOptions>
     const playing = this.getCurrentlyPlayingStatus();
 
     if (playing === MediaStatus.playing) {
-      this.elements.click("pause");
+      this.pause()
     } else {
-      this.elements.click("play");
+      this.play();
     }
   };
 
   toggleFavorite(): void {
-    this.elements.click("favorite");
+    click("favorite");
   }
 
   back(): void {
-    this.elements.click("back");
+    click("back");
   }
   forward(): void {
-    this.elements.click("forward");
+    click("forward");
   }
   repeat(): void {
-    this.elements.click("repeat");
+    click("repeat");
   }
 
   next(): void {
-    this.elements.click("next");
+    click("next");
   }
   previous(): void {
-    this.elements.click("previous");
+    click("previous");
   }
   toggleShuffle(): void {
-    this.elements.click("shuffle");
+    click("shuffle");
   }
   getCurrentlyPlayingStatus() {
-    const pause = this.elements.get("pause");
-
-    // if pause button is visible tidal is playing
-    if (pause) {
-      return MediaStatus.playing;
-    } else {
+    if (getPlayer().paused) {
       return MediaStatus.paused;
+    } else {
+      return MediaStatus.playing;
     }
   }
 
   getCurrentShuffleState() {
-    const shuffle = this.elements.get("shuffle");
+    const shuffle = get("shuffle");
     return shuffle?.getAttribute("aria-checked") === "true";
   }
 
   getCurrentRepeatState() {
-    const repeat = this.elements.get("repeat");
+    const repeat = get("repeat");
     switch (repeat?.getAttribute("data-type")) {
       case "button__repeatAll":
         return RepeatState.all;
@@ -279,67 +217,69 @@ export class DomTidalController implements TidalController<DomControllerOptions>
   play(): void {
     // Only play if not already playing
     if (this.getCurrentlyPlayingStatus() !== MediaStatus.playing) {
-      this.elements.click("play");
+      getPlayer().play();
     }
   }
   pause(): void {
     // Only pause if currently playing
     if (this.getCurrentlyPlayingStatus() === MediaStatus.playing) {
-      this.elements.click("pause");
+      getPlayer().pause();
     }
   }
   stop(): void {
     this.pause();
   }
 
-  getCurrentPosition() {
-    return this.elements.getText("current");
-  }
-  getCurrentPositionInSeconds(): number {
-    return convertDurationToSeconds(this.getCurrentPosition());
-  }
-
   getTrackId(): string {
-    const URLelement = this.elements.get("title").querySelector("a");
-    if (URLelement !== null) {
-      const id = URLelement.href.replace(/\D/g, "");
-      return id;
+    const LinkElement = get("title").querySelector("a");
+    if (LinkElement !== null) {
+      return LinkElement.href.replace(/\D/g, "");
     }
 
     return window.location.toString();
   }
 
-  getCurrentTime(): string {
-    return this.elements.getText("current");
+  getCurrentTime(): number {
+    return Math.round(getPlayer().currentTime);
   }
-  getDuration(): string {
-    return this.elements.getText("duration");
+  setCurrentTime(time: number): void {
+    getPlayer().currentTime = Math.max(Math.min(time, this.getDuration()), 0);
+  }
+  getDuration(): number {
+    return Math.round(getPlayer().duration);
+  }
+  getVolume(): number {
+    return getPlayer().volume;
+  }
+  setVolume(volume: number) {
+    // This doesn't update the value of the native range input displayed in the UI.
+    getPlayer().volume = Math.max(Math.min(volume, 1), 0);
   }
 
   getAlbumName(): string {
-    return this.elements.getAlbumName();
+    return this._getAlbumName();
   }
   getTitle(): string {
-    return this.elements.getText("title");
+    return getText("title");
   }
   getArtists(): string[] {
-    return this.elements.getArtistsArray();
+    return getArtistsArray();
   }
 
   getArtistsString(): string {
-    return this.elements.getArtistsString(this.getArtists());
+    return getArtistsString(this.getArtists());
   }
   getPlayingFrom(): string {
-    return this.elements.getText("playing_from");
+    return getText("playing_from");
   }
 
   isFavorite(): boolean {
-    return this.elements.isFavorite();
+    return get("favorite").getAttribute("aria-checked") === "true";
   }
   getSongIcon(): string {
-    return this.elements.getSongIcon();
+    return getSongIcon();
   }
   getSongImage(): string {
-    return this.elements.getSongIcon();
+    return getSongIcon();
   }
 }
