# src/TidalControllers/MediaSessionController/MediaSessionController.ts
@@ -6,7 +6,7 @@ import { Logger } from "../../features/logger";
 import { DomTidalController } from "../DomController/DomTidalController";
 import { DomControllerOptions } from "../DomController/DomControllerOptions";
 import { getTrackURL } from "../../features/tidal/url";
-import { convertDurationToSeconds } from "../../features/time/parse";
+import { convertSecondsToClockFormat} from "../../features/time/parse";
 import { constrainPollingInterval } from "../../utility/pollingConstraints";
 
 export interface MediaSessionControllerOptions {
@@ -58,7 +58,6 @@ export class MediaSessionController implements TidalController<MediaSessionContr
       try {
         // Read the existing MediaSession metadata set by Tidal
         const mediaMetadata = navigator.mediaSession?.metadata;
-        const playbackState = navigator.mediaSession?.playbackState || "none";
 
         if (mediaMetadata) {
           const current = this.getCurrentTime();
@@ -72,10 +71,10 @@ export class MediaSessionController implements TidalController<MediaSessionContr
             playingFrom: this.getPlayingFrom(),
             status: this.getCurrentlyPlayingStatus(),
             url: getTrackURL(this.getTrackId()),
-            current,
-            currentInSeconds: convertDurationToSeconds(current),
-            duration,
-            durationInSeconds: convertDurationToSeconds(duration),
+            current: convertSecondsToClockFormat(current),
+            currentInSeconds: current,
+            duration: convertSecondsToClockFormat(duration),
+            durationInSeconds: duration,
             image: this.getSongImage(),
             icon: this.getSongIcon(),
             favorite: this.isFavorite(),
@@ -273,24 +272,28 @@ export class MediaSessionController implements TidalController<MediaSessionContr
     return this.fallbackDomController.getCurrentRepeatState();
   }
 
-  getCurrentPosition(): string {
-    return this.fallbackDomController.getCurrentPosition();
-  }
-
-  getCurrentPositionInSeconds(): number {
-    return this.fallbackDomController.getCurrentPositionInSeconds();
-  }
-
   getTrackId(): string {
     return this.fallbackDomController.getTrackId();
   }
 
-  getCurrentTime(): string {
+  getCurrentTime(): number {
     return this.fallbackDomController.getCurrentTime();
   }
 
-  getDuration(): string {
+  setCurrentTime(time: number): void {
+    this.fallbackDomController.setCurrentTime(time);
+  }
+
+  getDuration(): number {
     return this.fallbackDomController.getDuration();
+  }
+
+  getVolume(): number {
+    return this.fallbackDomController.getVolume();
+  }
+
+  setVolume(volume: number) {
+    this.fallbackDomController.setVolume(volume);
   }
 
   getPlayingFrom(): string {
