# src/features/api/swagger.json
@@ -21,7 +21,9 @@
     "/current": {
       "get": {
         "summary": "Get current media info",
-        "tags": ["current"],
+        "tags": [
+          "current"
+        ],
         "responses": {
           "200": {
             "description": "Current media info",
@@ -39,7 +41,9 @@
     "/current/image": {
       "get": {
         "summary": "Get current media image",
-        "tags": ["current"],
+        "tags": [
+          "current"
+        ],
         "responses": {
           "200": {
             "description": "Current media image",
@@ -60,7 +64,9 @@
     },
     "/health": {
       "get": {
-        "tags": ["Health"],
+        "tags": [
+          "Health"
+        ],
         "summary": "Health check endpoint",
         "description": "Returns the health status of the Tidal Hi-Fi API service",
         "responses": {
@@ -104,7 +110,9 @@
     "/player/play": {
       "post": {
         "summary": "Play the current media",
-        "tags": ["player"],
+        "tags": [
+          "player"
+        ],
         "responses": {
           "200": {
             "description": "Ok",
@@ -122,7 +130,9 @@
     "/player/favorite/toggle": {
       "post": {
         "summary": "Add the current media to your favorites, or remove it if its already added to your favorites",
-        "tags": ["player"],
+        "tags": [
+          "player"
+        ],
         "responses": {
           "200": {
             "description": "Ok",
@@ -140,7 +150,9 @@
     "/player/pause": {
       "post": {
         "summary": "Pause the current media",
-        "tags": ["player"],
+        "tags": [
+          "player"
+        ],
         "responses": {
           "200": {
             "description": "Ok",
@@ -158,7 +170,9 @@
     "/player/next": {
       "post": {
         "summary": "Play the next song",
-        "tags": ["player"],
+        "tags": [
+          "player"
+        ],
         "responses": {
           "200": {
             "description": "Ok",
@@ -176,7 +190,9 @@
     "/player/previous": {
       "post": {
         "summary": "Play the previous song",
-        "tags": ["player"],
+        "tags": [
+          "player"
+        ],
         "responses": {
           "200": {
             "description": "Ok",
@@ -194,7 +210,9 @@
     "/player/shuffle/toggle": {
       "post": {
         "summary": "Play the previous song",
-        "tags": ["player"],
+        "tags": [
+          "player"
+        ],
         "responses": {
           "200": {
             "description": "Ok",
@@ -212,7 +230,9 @@
     "/player/repeat/toggle": {
       "post": {
         "summary": "Toggle the repeat status, toggles between \"off\" , \"single\" and \"all\"",
-        "tags": ["player"],
+        "tags": [
+          "player"
+        ],
         "responses": {
           "200": {
             "description": "Ok",
@@ -230,7 +250,9 @@
     "/player/playpause": {
       "post": {
         "summary": "Start playing the media if paused, or pause the media if playing",
-        "tags": ["player"],
+        "tags": [
+          "player"
+        ],
         "responses": {
           "200": {
             "description": "Ok",
@@ -245,10 +267,30 @@
         }
       }
     },
+    "/player/set": {
+      "post": {
+        "summary": "Set properties of the player",
+        "tags": [
+          "player"
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/PlayerSettings"
+              }
+            }
+          }
+        }
+      }
+    },
     "/settings/skipped-artists": {
       "get": {
         "summary": "get a list of artists that TIDAL Hi-Fi will skip if skipping is enabled",
-        "tags": ["settings"],
+        "tags": [
+          "settings"
+        ],
         "responses": {
           "200": {
             "description": "The list book.",
@@ -264,7 +306,9 @@
       },
       "post": {
         "summary": "Add new artists to the list of skipped artists",
-        "tags": ["settings"],
+        "tags": [
+          "settings"
+        ],
         "requestBody": {
           "required": true,
           "content": {
@@ -285,7 +329,9 @@
     "/settings/skipped-artists/delete": {
       "post": {
         "summary": "Remove artists from the list of skipped artists",
-        "tags": ["settings"],
+        "tags": [
+          "settings"
+        ],
         "requestBody": {
           "required": true,
           "content": {
@@ -306,7 +352,9 @@
     "/settings/skipped-artists/current": {
       "post": {
         "summary": "Add the current artist to the list of skipped artists",
-        "tags": ["settings"],
+        "tags": [
+          "settings"
+        ],
         "responses": {
           "200": {
             "description": "Ok"
@@ -315,7 +363,9 @@
       },
       "delete": {
         "summary": "Remove the current artist from the list of skipped artists",
-        "tags": ["settings"],
+        "tags": [
+          "settings"
+        ],
         "responses": {
           "200": {
             "description": "Ok"
@@ -326,7 +376,9 @@
     "/image": {
       "get": {
         "summary": "Get current image",
-        "tags": ["legacy"],
+        "tags": [
+          "legacy"
+        ],
         "deprecated": true,
         "responses": {
           "200": {
@@ -349,7 +401,9 @@
     "/play": {
       "get": {
         "summary": "Play the current media",
-        "tags": ["legacy"],
+        "tags": [
+          "legacy"
+        ],
         "deprecated": true,
         "responses": {
           "200": {
@@ -368,7 +422,9 @@
     "/favorite/toggle": {
       "get": {
         "summary": "Add the current media to your favorites, or remove it if its already added to your favorites",
-        "tags": ["legacy"],
+        "tags": [
+          "legacy"
+        ],
         "deprecated": true,
         "responses": {
           "200": {
@@ -387,7 +443,9 @@
     "/pause": {
       "get": {
         "summary": "Pause the current media",
-        "tags": ["legacy"],
+        "tags": [
+          "legacy"
+        ],
         "deprecated": true,
         "responses": {
           "200": {
@@ -406,7 +464,9 @@
     "/next": {
       "get": {
         "summary": "Play the next song",
-        "tags": ["legacy"],
+        "tags": [
+          "legacy"
+        ],
         "deprecated": true,
         "responses": {
           "200": {
@@ -425,7 +485,9 @@
     "/previous": {
       "get": {
         "summary": "Play the previous song",
-        "tags": ["legacy"],
+        "tags": [
+          "legacy"
+        ],
         "deprecated": true,
         "responses": {
           "200": {
@@ -444,7 +506,9 @@
     "/playpause": {
       "get": {
         "summary": "Toggle play/pause",
-        "tags": ["legacy"],
+        "tags": [
+          "legacy"
+        ],
         "deprecated": true,
         "responses": {
           "200": {
@@ -557,12 +621,26 @@
         "type": "string",
         "example": "OK"
       },
+      "PlayerSettings": {
+        "type": "object",
+        "properties": {
+          "position": {
+            "type": "integer"
+          },
+          "volume": {
+            "type": "integer"
+          }
+        }
+      },
       "StringArray": {
         "type": "array",
         "items": {
           "type": "string"
         },
-        "example": ["Artist1", "Artist2"]
+        "example": [
+          "Artist1",
+          "Artist2"
+        ]
       }
     }
   },
